tests/error/modifier_errors/higher_order_bad_return.err
Error: Unitary flag mismatch (at $FILE:14:11)
   | 
12 | def apply_control(f: Controllable[[qubit], None], q: qubit) -> Unitary[[qubit], None]:
13 |     f(q)
14 |     return dagger_only
   |            ^^^^^^^^^^^ Expected function with unitary flags: `unitary=True`, got:
   |                        `dagger=True`

Guppy compilation failed due to 1 previous error
